--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.generate-ddl=true
+
+# App Properties
+phu.app.jwtSecret=jwtGrokonezSecretKey
+phu.app.jwtExpiration=86400
