--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,18 @@
 #spring.jpa.show-sql=false
 #spring.jpa.generate-ddl=true
 #Lần đầu deploy lên heroku thì để là create, lầu sau sửa thành update
-spring.jpa.hibernate.ddl-auto=create
-
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bloglol?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=txingez93
 spring.jpa.generate-ddl=true
-
 # App Properties
 phu.app.jwtSecret=jwtGrokonezSecretKey
 phu.app.jwtExpiration=86400
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=true
+spring.mvc.static-path-pattern=/resources/static/**
